kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ipo-backend
  labels:
    app: ipo-backend
spec:
  selector:
    matchLabels:
      app: ipo-backend
  template:
    metadata:
      labels:
        app: ipo-backend
    spec:
      containers:
        - name: ipo-backend
          image: lundgren2/ipo-backend
          imagePullPolicy: Always
          # resources:
          #   requests:
          #     cpu: '500m'
          #     memory: 500Mi
          #   limits:
          #     cpu: '1'
          #     memory: 2Gi
