kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.ipo.se
      secretName: ipo-tls
  rules:
    - host: api.ipo.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipo-backend
                port:
                  number: 80
